# advent-of-code-2025

./: Cargo.toml  DAY04_COMPARISON.md  DAY06_COMPARISON.md  INLINE_ANALYSIS.md  OPTIMIZATIONS.md  OPTIMIZATION_FAILURES.md  README.md  SIMD_LEARNINGS.md  SOLUTIONS_ANALYSIS.md
.github/workflows/: readme-stars.yml
