[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[profile.release]
opt-level = 3
overflow-checks = false
strip = "debuginfo"
lto = "fat"

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
geo = "0.32.0"
grid = "1.0.0"
itertools = "0.14.0"
merged_range = "0.1.0"
nom = "8.0.0"
pico-args = "0.5.0"
rayon = "1.11.0"
regex = "1.12.2"
rstar = "0.12.2"
tinyjson = "2.5.1"

# Solution dependencies
